--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Testing</h1>
     <p>First test by oriyomi</p>
     <p>Test 2 by oriyomi</p>
+    <h3>Izima Obisike testing the repo</h3>g
   </body>
 </html>
